# arrowp

./: .gitignore  .travis.yml  CHANGELOG.md  LICENCE  README  README.md  arrowp-qq.cabal  arrowp.cabal  stack-debug.yaml  stack-test.yaml  stack.yaml
app/: Main.hs
examples/: Conditional.hs  GHC.hs  Main.hs  README  Static.hs  conditional.hs
examples/TH/: BackstateArrow.hs  TH.hs  While.hs  test
examples/cgi/: ArrowContext.lhs  CGI.as  CGI.hs
examples/circuits/: Circuits.las  Circuits.lhs
examples/parser/: ExprParser.las  ExprParser.lhs  Parser.las  Parser.lhs
examples/powertrees/: Hom.las  Hom.lhs
examples/quasiquoter/: small.hs  while.hs
examples/small/: BackStateArrow.as  BackstateArrow.hs  Egs.as  Egs.hs  Eval.as  Eval.hs  Eval1.as  Eval1.hs  Lift.as  Lift.hs  ListOps.as  ListOps.hs
preprocessor/: ArrCode.lhs  ArrSyn.lhs  Lexer.hs  Main.lhs  Parser.ly  State.hs  Utils.lhs
src/: ArrCode.hs  ArrSyn.hs  NewCode.hs  Parser.ly  SrcLocs.hs  Utils.hs
src/Control/Arrow/: Notation.hs  QuasiQuoter.hs
