Name:           arrowp-qq
Version:        0.2
Cabal-Version:  >= 1.20
Build-Type:     Simple
License:        GPL
License-File:   LICENCE
Author:         Jose Iborra <pepeiborra@gmail.com>
Maintainer:     Jose Iborra <pepeiborra@gmail.com>
Homepage:       http://www.haskell.org/arrows/
Category:       Development
Synopsis:       A preprocessor and quasiquoter for translating arrow notation
Description:    A suite of preprocessor and quasiquoter to desugar arrow notation built on top of Ross Paterson's arrowp and the venerable haskell-src-exts.
Extra-Source-Files: README

Source-Repository head
    Type: darcs
    Location: http://github.com/pepeiborra/arrowp

Library
    Exposed-Modules:     
                         Control.Arrow.Notation,
                         Control.Arrow.QuasiQuoter
    Build-Depends: base < 5,
                   array,
                   containers,
                   haskell-src-exts,
                   haskell-src-meta,
                   syb,
                   template-haskell < 2.13, 
                   transformers,
                   uniplate

    Hs-Source-Dirs: src
    Other-Modules:  ArrCode ArrSyn Utils
    Default-Language:    Haskell2010

executable arrowp-ext
  buildable: True
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
                base >= 4.7 && < 5, 
                arrowp-qq,
                haskell-src-exts
  default-language: Haskell2010