Name:           arrowp
Version:        0.5.0.2
Cabal-Version:  >= 1.20
Build-Type:     Simple
License:        GPL
License-File:   LICENCE
Author:         Ross Paterson <ross@soi.city.ac.uk>
Maintainer:     Ross Paterson <ross@soi.city.ac.uk>
Homepage:       http://www.haskell.org/arrows/
Category:       Development
Synopsis:       preprocessor translating arrow notation into Haskell 98
Description:    A preprocessor that reads Haskell with arrow notation
                and outputs Haskell 98.  Note that GHC 6.2 or later has
                built-in support for arrow notation, so if you're only
                using GHC, you don't need this preprocessor: just rename
                your arrow module as an ordinary Haskell source file and
                add a @LANGUAGE Arrows@ pragma at the top.  GHC also
                gives better error messages for arrow code.
Extra-Source-Files: README

Library
    Exposed-Modules:     Control.Arrow.QuasiQuoter
    Build-Depends: base, array, containers, haskell-src, template-haskell, transformers
    Hs-Source-Dirs: src
    Other-Modules:  ArrCode ArrSyn Lexer Parser Parser State Utils
    Default-Language:    Haskell2010

Executable arrowp
    Main-is:        Main.lhs
    Build-Depends:  base >= 4.4 && < 5.0, arrowp, haskell-src
    Hs-Source-Dirs: preprocessor
    Default-Language:    Haskell2010

Source-Repository head
    Type: darcs
    Location: http://code.haskell.org/~ross/arrowp
